[gd_scene load_steps=7 format=3 uid="uid://bdf7n8172jmq"]

[ext_resource type="Script" uid="uid://d323g585uoxuw" path="res://root.gd" id="1_vvh5c"]
[ext_resource type="Texture2D" uid="uid://43vpon1kdw1c" path="res://icon.svg" id="2_28aoi"]
[ext_resource type="PackedScene" uid="uid://dwrw4mrmxttyv" path="res://attribute_slider.tscn" id="3_jnlp7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_epypp"]
radius = 64.1249

[sub_resource type="CircleShape2D" id="CircleShape2D_0hol4"]
radius = 64.1249

[sub_resource type="Environment" id="Environment_0e48y"]
background_mode = 3
glow_enabled = true

[node name="Node2D" type="Node2D"]
script = ExtResource("1_vvh5c")

[node name="Source" type="Sprite2D" parent="."]
position = Vector2(468, 96)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_28aoi")

[node name="Area2D" type="Area2D" parent="Source"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Source/Area2D"]
shape = SubResource("CircleShape2D_epypp")

[node name="Target" type="Sprite2D" parent="."]
position = Vector2(1042, 518)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_28aoi")

[node name="Area2D" type="Area2D" parent="Target"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target/Area2D"]
shape = SubResource("CircleShape2D_0hol4")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0e48y")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BoxContainer" type="BoxContainer" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 146.0
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/BoxContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/BoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_constants/separation = 0

[node name="Button" type="Button" parent="CanvasLayer/BoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Emit"

[node name="TimeAttributeSlider" parent="CanvasLayer/BoxContainer/PanelContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_jnlp7")]
unique_name_in_owner = true
layout_mode = 2
attribute = "Time"
step = 0.1
value = 3.0

[node name="AccuracyAttributeSlider" parent="CanvasLayer/BoxContainer/PanelContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_jnlp7")]
unique_name_in_owner = true
layout_mode = 2
attribute = "Accuracy"
step = 0.1

[node name="StrandsAttributeSlider" parent="CanvasLayer/BoxContainer/PanelContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_jnlp7")]
unique_name_in_owner = true
layout_mode = 2
attribute = "Strands"

[node name="PointsAttributeSlider" parent="CanvasLayer/BoxContainer/PanelContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_jnlp7")]
unique_name_in_owner = true
layout_mode = 2
attribute = "Points"

[node name="GlowAttributeSlider" parent="CanvasLayer/BoxContainer/PanelContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_jnlp7")]
unique_name_in_owner = true
layout_mode = 2
attribute = "Glow"
step = 0.1
value = 2.5

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/BoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/BoxContainer/PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorPicker" type="ColorPicker" parent="CanvasLayer/BoxContainer/PanelContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
picker_shape = 2
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/BoxContainer/PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Lightning" type="Node2D" parent="."]
